[package]
name = "auto_forward"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "A Client Server Application for forwarding Port between a Docker Container and the Host"
readme = "README.md"
repository = "https://github.com/MunsMan/autoForward"
keywords = ["docker", "devcontainer", "port", "forwarding"]
categories = ["development-tools", "command-line-utilities"]
include = ["src/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "container"
path = "src/bin/container.rs"

[[bin]]
name = "host"
path = "src/bin/host.rs"

[dependencies]
